shell: read wallpaper config from plugin instead of local file

The local config is not always up-to-date.

BUG: 481741
FIXED-IN: 6.0


(cherry picked from commit 37d6e6b5043cd2a44e19d668b113c8d2ebeedb73)